<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_activity_main"
    android:id="@+id/layoutMain"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewStatusBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lb_bem_vindo"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerIdentificacaoDispositivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerIdentificacaoDispositivo"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorWhite"
        android:prompt="@string/lb_identificacao_dispositivo"
        android:spinnerMode="dialog"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStatusBluetooth" />


    <Button
        android:id="@+id/buttonConectar"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/lb_conectar"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerIdentificacaoDispositivo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/lb_nome_app"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConectar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="106dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConectar" />

</android.support.constraint.ConstraintLayout>